Cleaned up folder and fixed blurring

--- a/src/app/projects/page.module.scss
+++ b/src/app/projects/page.module.scss
@@ -301,53 +301,7 @@ section.project {
     flex-wrap: wrap;
     width: 100%;
     box-sizing: border-box;
-    overflow: hidden;
-
-    input { display: none; }
-    label {
-        cursor: pointer;
-        letter-spacing: normal;
-        background: rgba(0, 0, 0, 0.20);
-        backdrop-filter: blur(2px);
-        padding: 8px 16px;
-        border-radius: 16px;
-        display: flex;
-        align-items: center;
-        gap: 8px;
-        text-transform: uppercase;
-        width: 17rem;
-        height: 3.2rem;
-        box-sizing: border-box;
-        span {
-            content: ' ';
-            $r: 16px;
-            width: $r;
-            height: $r;
-            background-color: rgba(217, 217, 217, 0.50);
-            backdrop-filter: blur(2px);
-            border-radius: 50%;
-            transition: background-color 0.2s;
-        }
-        &:hover {
-            span { background-color: #edededcc; }
-        }
-    }
-    .radio { cursor: pointer; }
-    .container { 
-        width: 100%; 
-        height: 100%;
-        box-sizing: border-box;
-    }
-    #starSelector:checked {
-        & ~ .container #starView {
-            display: block;
-        }
-        & + label span { background: #EDEDED; }
-    }
-    #listSelector:checked {
-        & ~ .container #listView { display: block; }
-        & + label span { background: #EDEDED; }
-    }
+    overflow-y: scroll;
 }
 .heroContent {
     height: 100%;
